Fix rem spacing for overline

--- a/angular/_typography.scss
+++ b/angular/_typography.scss
@@ -21,9 +21,9 @@
     }
 
     .mat-overline {
-        font-size: 12px;
+        font-size: .75rem;
         font-weight: 600;
-        letter-spacing: 2px;
+        letter-spacing: .125rem;
         line-height: 2.66;
         text-transform: uppercase;
     }
